--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -272,7 +272,7 @@ jobs:
     - name: Compile solution
       run: dotnet build -c ${{ env.CONFIG }}
 
-    - name: Run External XUnit Integration Tests
+    - name: Run External XUnit Real Integration Tests
       run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_RD_XUNIT_PROJECT }}
 
   nunit-real-external-tests:
@@ -292,7 +292,7 @@ jobs:
     - name: Compile solution
       run: dotnet build -c ${{ env.CONFIG }}
 
-    - name: Run External NUnit Integration Tests
+    - name: Run External NUnit Real Integration Tests
       run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_RD_NUNIT_PROJECT }}
 
   tunit-integration-tests:
@@ -335,6 +335,81 @@ jobs:
     #     name: tunit-integration-test-results
     #     path: ${{ env.TUNIT_INT_DIR }}/${{ env.TUNIT_INTEGRATION_COVERAGE_FILENAME }}
 
+  tunit-real-integration-tests:
+    runs-on: ubuntu-latest
+    needs: tunit-integration-tests
+
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v4
+      with:
+        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/8.0)
+        dotnet-version: 9.0.x
+    
+    - name: Compile solution
+      run: dotnet build -c ${{ env.CONFIG }}
+
+    - name: Run TUnit Real Integration Tests
+      run: dotnet test -c ${{ env.CONFIG }} ${{ env.M_RD_TUNIT_PROJECT }}
+
+    # - name: Run TUnit Integration Tests
+    #   uses: b3b00/coverlet-action@11.9
+    #   with:
+    #     testProject: ${{ env.M_TUNIT_PROJECT }}
+    #     output: ${{ env.TUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
+    #     outputFormat: ${{ env.COVERAGE_FORMAT }}
+    #     threshold: ${{ env.COVERAGE_THRESHOLD }}
+    #     excludes: '[Merlin.TUnit]Tests.*'
+
+    # - name: Publish Artifacts
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: tunit-integration-test-results
+    #     path: ${{ env.TUNIT_INT_DIR }}/${{ env.TUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
+
+  tunit-external-tests:
+    runs-on: ubuntu-latest
+    needs: tunit-real-integration-tests
+
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v3
+      with:
+        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/8.0)
+        dotnet-version: 9.0.x
+
+    - name: Compile solution
+      run: dotnet build -c ${{ env.CONFIG }}
+
+    - name: Run External TUnit Integration Tests
+      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_TUNIT_PROJECT }}
+
+  tunit-real-external-tests:
+    runs-on: ubuntu-latest
+    needs: tunit-external-tests
+
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v3
+      with:
+        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/8.0)
+        dotnet-version: 9.0.x
+
+    - name: Compile solution
+      run: dotnet build -c ${{ env.CONFIG }}
+
+    - name: Run External TUnit Real Integration Tests
+      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_RD_TUNIT_PROJECT }}
+
   generate-report:
     runs-on: ubuntu-latest
     needs: [build, 
@@ -346,7 +421,10 @@ jobs:
             xunit-external-tests, 
             nunit-real-external-tests,
             xunit-real-external-tests,
-            tunit-integration-tests]
+            tunit-integration-tests,
+            tunit-real-integration-tests,
+            tunit-external-tests,
+            tunit-real-external-tests]
     
     steps:
     - name: Checkout Code
