--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -337,7 +337,12 @@ jobs:
 
   tunit-real-integration-tests:
     runs-on: ubuntu-latest
-    needs: tunit-integration-tests
+    needs: [nunit-integration-tests,
+            xunit-integration-tests,
+            xunit-external-tests,
+            nunit-external-tests,
+            xunit-real-external-tests,
+            nunit-real-external-tests]
 
     steps:
     - name: Checkout Code
@@ -392,7 +397,7 @@ jobs:
 
   tunit-real-external-tests:
     runs-on: ubuntu-latest
-    needs: tunit-external-tests
+    needs: tunit-real-integration-tests
 
     steps:
     - name: Checkout Code
@@ -412,18 +417,7 @@ jobs:
 
   generate-report:
     runs-on: ubuntu-latest
-    needs: [build, 
-            nunit-integration-tests,        
-            xunit-integration-tests, 
-            nunit-real-integration-tests,
-            xunit-real-integration-tests,
-            nunit-external-tests,
-            xunit-external-tests, 
-            nunit-real-external-tests,
-            xunit-real-external-tests,
-            tunit-integration-tests,
-            tunit-real-integration-tests,
-            tunit-external-tests,
+    needs: [tunit-external-tests,
             tunit-real-external-tests]
     
     steps:
