--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -377,7 +377,8 @@ jobs:
 
   tunit-external-tests:
     runs-on: ubuntu-latest
-    needs: tunit-real-integration-tests
+    needs: [tunit-real-integration-tests, 
+            tunit-integration-tests]
 
     steps:
     - name: Checkout Code
@@ -397,7 +398,8 @@ jobs:
 
   tunit-real-external-tests:
     runs-on: ubuntu-latest
-    needs: tunit-real-integration-tests
+    needs: [tunit-real-integration-tests, 
+            tunit-integration-tests]
 
     steps:
     - name: Checkout Code
