--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -425,7 +425,6 @@ jobs:
     - name: Run External TUnit Real Integration Tests
       run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_RD_TUNIT_PROJECT }} --no-build
 
-
   xunit3-integration-tests:
     runs-on: ubuntu-latest
     needs: [tunit-real-external-tests, 
@@ -458,12 +457,48 @@ jobs:
     - name: Publish Artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: xunit-integration-test-results
+        name: xunit3-integration-test-results
         path: ${{ env.COVERLET_DIR }}/${{env.XUNIT3_INTEGRATION_COVERAGE_FILENAME}}
+
+  xunit3-real-integration-tests:
+    runs-on: ubuntu-latest
+    needs: [tunit-real-external-tests, 
+            tunit-external-tests]
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v4
+      with:
+        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
+        dotnet-version: 9.0.x
+    
+    - name: Compile solution
+      run: dotnet build -c ${{ env.CONFIG }}
+
+    - name: Run XUnit Real Integration Tests
+      uses: b3b00/coverlet-action@1.3.5-alpha2
+      with:
+        testProject: ${{ env.M_RD_XUNIT3_PROJECT }}
+        output: ${{ env.XUNIT3_RD_INTEGRATION_COVERAGE_FILENAME }}
+        outputFormat: ${{ env.COVERAGE_FORMAT }}
+        #threshold: ${{ env.COVERAGE_THRESHOLD }}
+        excludes: '[Merlin.XUnit3.RealDevice]Tests.*'
+
+    - name: Display structure of downloaded files
+      run: ls -R
+    
+    - name: Publish Artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: xunit3-real-integration-test-results
+        path: ${{ env.COVERLET_DIR }}/${{env.XUNIT3_RD_INTEGRATION_COVERAGE_FILENAME}}
 
   generate-report:
     runs-on: ubuntu-latest
-    needs: [xunit3-integration-tests]
+    needs: [xunit3-integration-tests,
+            xunit3-real-integration-tests]
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
@@ -503,6 +538,16 @@ jobs:
       with:
         name: tunit-real-integration-test-results
 
+    - name: Download xunit3-integration-test results
+      uses: actions/download-artifact@v4
+      with:
+        name: xunit3-integration-test-results
+
+    - name: Download xunit3-real-integration-test results
+      uses: actions/download-artifact@v4
+      with:
+        name: xunit3-real-integration-test-results
+
     - name: Setup Java JDK for Codacy Code Coverage
       uses: actions/setup-java@v4.7.1
       with:
@@ -514,9 +559,11 @@ jobs:
            -r ${{env.UNIT_COVERAGE_FILENAME}} \
            -r ${{env.NUNIT_INTEGRATION_COVERAGE_FILENAME}} \
            -r ${{env.XUNIT_INTEGRATION_COVERAGE_FILENAME}} \
+           -r ${{env.XUNIT3_INTEGRATION_COVERAGE_FILENAME}} \
            -r ${{env.TUNIT_INTEGRATION_COVERAGE_FILENAME}} \
            -r ${{env.NUNIT_RD_INTEGRATION_COVERAGE_FILENAME}} \
            -r ${{env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME}} \
+           -r ${{env.XUNIT3_RD_INTEGRATION_COVERAGE_FILENAME}} \
            -r ${{env.TUNIT_RD_INTEGRATION_COVERAGE_FILENAME}}
     
     # - name: Present working directory
