--- a/Merlin.XUnit3/Merlin.XUnit3.csproj
+++ b/Merlin.XUnit3/Merlin.XUnit3.csproj
@@ -26,11 +26,11 @@
     -->
     
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.0" />
+    <PackageReference Include="Microsoft.TestPlatform" Version="17.14.0"/>
     <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" Version="17.14.2" />
     <PackageReference Include="xunit.v3" Version="2.0.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.0" />
-    <PackageReference Include="xunit.v3.runner.console" Version="2.0.2  " />
-    <PackageReference Include="Microsoft.Testing.Platform" Version="1.7.1"/>
+    <PackageReference Include="xunit.v3.runner.console" Version="2.0.2" />
   </ItemGroup>
 
   <ItemGroup>
