--- a/.github/workflows/xunit3-pipeline.yml
+++ b/.github/workflows/xunit3-pipeline.yml
@@ -103,7 +103,7 @@ jobs:
 
     - name: Run xUnit tests with coverage
       run: >
-          dotnet run -c ${{ env.CONFIG }} --project {{ env.M_XUNIT3_PROJECT }}
+          dotnet run -c ${{ env.CONFIG }} --project ${{ env.M_XUNIT3_PROJECT }}
           --coverage
           --coverage-output-format ${{ env.COVERAGE_FORMAT }}
           --coverage-output ${{ env.XUNIT3_INTEGRATION_COVERAGE_FILENAME }}    
