--- a/.github/workflows/tunit-pipeline.yml
+++ b/.github/workflows/tunit-pipeline.yml
@@ -5,8 +5,6 @@ on:
     paths:
       - '.github/workflows/tunit-pipeline.yml'
       - 'Saucery.TUnit/**'
-      - 'ExternalMerlin.TUnit/**'
-      - 'ExternalMerlin.TUnit.RealDevices/**'
       - 'Merlin.TUnit/**'
       - 'Merlin.TUnit.RealDevices/**'
     branches:
@@ -33,17 +31,15 @@ env:
   TT_PROJECT: Template.Tests/Template.Tests.csproj
   M_TUNIT_PROJECT: Merlin.TUnit/Merlin.TUnit.csproj                                             # full path to xunit internal integration test project file
   M_RD_TUNIT_PROJECT: Merlin.TUnit.RealDevices/Merlin.TUnit.RealDevices.csproj                  # full path to xunit internal integration test project file
-  EM_TUNIT_PROJECT: ExternalMerlin.TUnit/ExternalMerlin.TUnit.csproj                            # full path to xunit external integration test project file
-  EM_RD_TUNIT_PROJECT: ExternalMerlin.TUnit.RealDevices/ExternalMerlin.TUnit.RealDevices.csproj # full path to xunit external integration test project file
   SAUCE_USER_NAME: ${{ secrets.SAUCE_USER_NAME }}
   SAUCE_API_KEY: ${{ secrets.SAUCE_API_KEY }}
   CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
   CONFIG: Release
   APP_PACKAGE_PATH: 'published'                                                                 # set this to the path to your web app project, defaults to the repository root
   COVERAGE_FORMAT: cobertura
-  UNIT_COVERAGE_FILENAME: opencover.unit.xml
-  TUNIT_INTEGRATION_COVERAGE_FILENAME: opencover.tunit.integration.xml
-  TUNIT_RD_INTEGRATION_COVERAGE_FILENAME: opencover.tunit.realdevice.integration.xml
+  UNIT_COVERAGE_FILENAME: cobertura.unit.xml
+  TUNIT_INTEGRATION_COVERAGE_FILENAME: cobertura.tunit.integration.xml
+  TUNIT_RD_INTEGRATION_COVERAGE_FILENAME: cobertura.tunit.realdevice.integration.xml
   COVERAGE_THRESHOLD: 80
 
 permissions:
@@ -155,50 +151,10 @@ jobs:
         name: tunit-real-integration-test-results
         path: ${{ env.TUNIT_RD_INT_DIR }}/${{env.TUNIT_RD_INTEGRATION_COVERAGE_FILENAME}}
 
-  tunit-external-tests:
-    runs-on: ubuntu-latest
-    needs: [tunit-real-integration-tests, 
-            tunit-integration-tests]
-    steps:
-    - name: Checkout Code
-      uses: actions/checkout@v5
-
-    - name: Setup dotnet
-      uses: actions/setup-dotnet@v5
-      with:
-        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
-        dotnet-version: 9.0.x
-
-    - name: Compile solution
-      run: dotnet build -c ${{ env.CONFIG }}
-
-    - name: Run External TUnit Integration Tests
-      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_TUNIT_PROJECT }} --no-build
-
-  tunit-real-external-tests:
-    runs-on: ubuntu-latest
-    needs: [tunit-real-integration-tests, 
-            tunit-integration-tests]
-    steps:
-    - name: Checkout Code
-      uses: actions/checkout@v5
-
-    - name: Setup dotnet
-      uses: actions/setup-dotnet@v5
-      with:
-        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
-        dotnet-version: 9.0.x
-
-    - name: Compile solution
-      run: dotnet build -c ${{ env.CONFIG }}
-
-    - name: Run External TUnit Real Integration Tests
-      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_RD_TUNIT_PROJECT }} --no-build
-
   generate-report:
     runs-on: ubuntu-latest
-    needs: [tunit-external-tests,
-            tunit-real-external-tests]
+    needs: [tunit-integration-tests,
+            tunit-real-integration-tests]
     steps:
     - name: Checkout Code
       uses: actions/checkout@v5
