--- a/.github/workflows/xunit-pipeline.yml
+++ b/.github/workflows/xunit-pipeline.yml
@@ -5,8 +5,6 @@ on:
     paths:
       - '.github/workflows/xunit-pipeline.yml'
       - 'Saucery.XUnit/**'
-      - 'ExternalMerlin.XUnit/**'
-      - 'ExternalMerlin.XUnit.RealDevices/**'
       - 'Merlin.XUnit/**'
       - 'Merlin.XUnit.RealDevices/**'
     branches:
@@ -30,15 +28,13 @@ env:
   TT_PROJECT: Template.Tests/Template.Tests.csproj
   M_XUNIT_PROJECT: Merlin.XUnit/Merlin.XUnit.csproj                                             # full path to xunit internal integration test project file
   M_RD_XUNIT_PROJECT: Merlin.XUnit.RealDevices/Merlin.XUnit.RealDevices.csproj                  # full path to xunit internal integration test project file
-  EM_XUNIT_PROJECT: ExternalMerlin.XUnit/ExternalMerlin.XUnit.csproj                            # full path to xunit external integration test project file
-  EM_RD_XUNIT_PROJECT: ExternalMerlin.XUnit.RealDevices/ExternalMerlin.XUnit.RealDevices.csproj # full path to xunit external integration test project file
   SAUCE_USER_NAME: ${{ secrets.SAUCE_USER_NAME }}
   SAUCE_API_KEY: ${{ secrets.SAUCE_API_KEY }}
   CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
   CONFIG: Release
   APP_PACKAGE_PATH: 'published'                                                                 # set this to the path to your web app project, defaults to the repository root
   COVERAGE_FORMAT: cobertura
-  UNIT_COVERAGE_FILENAME: opencover.unit.xml
+  UNIT_COVERAGE_FILENAME: cobertura.unit.xml
   XUNIT_INTEGRATION_COVERAGE_FILENAME: cobertura.xunit.integration.xml
   XUNIT_RD_INTEGRATION_COVERAGE_FILENAME: cobertura.xunit.realdevice.integration.xml
   COVERAGE_THRESHOLD: 80
@@ -162,50 +158,10 @@ jobs:
         name: xunit-real-integration-test-results
         path: ${{ env.COVERLET_DIR }}/${{env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME}}
 
-  xunit-external-tests:
-    runs-on: ubuntu-latest
-    needs: [xunit-real-integration-tests, 
-            xunit-integration-tests]
-    steps:
-    - name: Checkout Code
-      uses: actions/checkout@v5
-
-    - name: Setup dotnet
-      uses: actions/setup-dotnet@v5
-      with:
-        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
-        dotnet-version: 9.0.x
-
-    - name: Compile solution
-      run: dotnet build -c ${{ env.CONFIG }}
-
-    - name: Run External XUnit Integration Tests
-      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_XUNIT_PROJECT }} --no-build
-
-  xunit-real-external-tests:
-    runs-on: ubuntu-latest
-    needs: [xunit-real-integration-tests, 
-            xunit-integration-tests]
-    steps:
-    - name: Checkout Code
-      uses: actions/checkout@v5
-
-    - name: Setup dotnet
-      uses: actions/setup-dotnet@v5
-      with:
-        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
-        dotnet-version: 9.0.x
-
-    - name: Compile solution
-      run: dotnet build -c ${{ env.CONFIG }}
-
-    - name: Run External XUnit Real Integration Tests
-      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_RD_XUNIT_PROJECT }} --no-build
-
   generate-report:
     runs-on: ubuntu-latest
-    needs: [xunit-external-tests,
-            xunit-real-external-tests]
+    needs: [xunit-integration-tests,
+            xunit-real-integration-tests]
     steps:
     - name: Checkout Code
       uses: actions/checkout@v5
