--- a/.github/workflows/xunit3-pipeline.yml
+++ b/.github/workflows/xunit3-pipeline.yml
@@ -5,8 +5,6 @@ on:
     paths:
       - '.github/workflows/xunit3-pipeline.yml'
       - 'Saucery.XUnit3/**'
-      - 'ExternalMerlin.XUnit3/**'
-      - 'ExternalMerlin.XUnit3.RealDevices/**'
       - 'Merlin.XUnit3/**'
       - 'Merlin.XUnit3.RealDevices/**'
     branches:
@@ -30,15 +28,13 @@ env:
   TT_PROJECT: Template.Tests/Template.Tests.csproj
   M_XUNIT3_PROJECT: Merlin.XUnit3/Merlin.XUnit3.csproj                                             # full path to xunit internal integration test project file
   M_RD_XUNIT3_PROJECT: Merlin.XUnit3.RealDevices/Merlin.XUnit3.RealDevices.csproj                  # full path to xunit internal integration test project file
-  EM_XUNIT3_PROJECT: ExternalMerlin.XUnit3/ExternalMerlin.XUnit3.csproj                            # full path to xunit external integration test project file
-  EM_RD_XUNIT3_PROJECT: ExternalMerlin.XUnit3.RealDevices/ExternalMerlin.XUnit3.RealDevices.csproj # full path to xunit external integration test project file
   SAUCE_USER_NAME: ${{ secrets.SAUCE_USER_NAME }}
   SAUCE_API_KEY: ${{ secrets.SAUCE_API_KEY }}
   CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
   CONFIG: Release
   APP_PACKAGE_PATH: 'published'                                                                 # set this to the path to your web app project, defaults to the repository root
   COVERAGE_FORMAT: cobertura
-  UNIT_COVERAGE_FILENAME: opencover.unit.xml
+  UNIT_COVERAGE_FILENAME: cobertura.unit.xml
   XUNIT3_INTEGRATION_COVERAGE_FILENAME: cobertura.xunit3.integration.xml
   XUNIT3_RD_INTEGRATION_COVERAGE_FILENAME: cobertura.xunit3.realdevice.integration.xml
   COVERAGE_THRESHOLD: 80
@@ -150,50 +146,10 @@ jobs:
         name: xunit3-real-integration-test-results
         path: ${{ env.XUNIT3_RD_INT_TEST_RESULTS_DIR }}/${{env.XUNIT3_RD_INTEGRATION_COVERAGE_FILENAME}}
 
-  xunit3-external-tests:
-    runs-on: ubuntu-latest
-    needs: [xunit3-real-integration-tests, 
-            xunit3-integration-tests]
-    steps:
-    - name: Checkout Code
-      uses: actions/checkout@v5
-
-    - name: Setup dotnet
-      uses: actions/setup-dotnet@v5
-      with:
-        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
-        dotnet-version: 9.0.x
-
-    - name: Compile solution
-      run: dotnet build -c ${{ env.CONFIG }}
-
-    - name: Run External XUnit3 Integration Tests
-      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_XUNIT3_PROJECT }} --no-build
-
-  xunit3-real-external-tests:
-    runs-on: ubuntu-latest
-    needs: [xunit3-real-integration-tests, 
-            xunit3-integration-tests]
-    steps:
-    - name: Checkout Code
-      uses: actions/checkout@v5
-
-    - name: Setup dotnet
-      uses: actions/setup-dotnet@v5
-      with:
-        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
-        dotnet-version: 9.0.x
-
-    - name: Compile solution
-      run: dotnet build -c ${{ env.CONFIG }}
-
-    - name: Run External XUnit3 Real Integration Tests
-      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_RD_XUNIT3_PROJECT }} --no-build
-
   generate-report:
     runs-on: ubuntu-latest
-    needs: [xunit3-external-tests,
-            xunit3-real-external-tests]
+    needs: [xunit3-integration-tests,
+            xunit3-real-integration-tests]
     steps:
     - name: Checkout Code
       uses: actions/checkout@v5
